--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,4 +1,5 @@
 .container {
+    
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -7,4 +8,10 @@
     text-align: center;
    
     background-color: rgb(232, 236, 240);
+}
+mat-toolbar{
+    background-color:#82B1FF ;
+    display:flex;
+    justify-content: space-evenly;
+    margin-bottom: 40px;
 }
