--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
+<mat-toolbar>
+  <span>Angular 9</span>
+  <span>Dialog - Angular Material</span>
+</mat-toolbar>
 <div class="container">
   <div>
     <mat-form-field>
@@ -10,8 +14,8 @@
   <h4 *ngIf="nombre">
     You selected: <p style="font-weight: bold">{{nombre}}</p>
   </h4>
-  <h4 *ngIf="apellido" >
+  <h4 *ngIf="apellido">
     You selected: <p style="font-weight: bold">{{apellido}}</p>
   </h4>
-  
+
 </div>
